# equipotent

./: .gitignore  App.svelte  Cargo.toml  README.md  migrations.toml  package-lock.json  package.json  postcss.config.js  rustfmt.toml  snowpack.config.mjs  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml
be-rs/: Cargo.toml  package.json
be-rs/src/: ddg.rs  main.rs  queries.rs
be-rs/src/queries/: mod.rs  openai.rs  search_instant.rs  search_scrape.rs
common-rs/: Cargo.toml
common-rs/src/: fe.rs  lib.rs
fe-rs/: Cargo.toml  README.md
fe-rs/src/: lib.rs
fe-rs/tests/: web.rs
fe-svelte/: App.svelte  AppContents.svelte  ResultItem.svelte  index.js  package-lock.json  package.json  postcss.config.js  snowpack.config.mjs  tailwind.config.js  tsconfig.json
fe-svelte/src/: App.svelte  AppContents.svelte  CodeMirror.svelte  Epub.svelte  FileUpload.svelte  ResultItem.svelte  epub.css  index.html
middle-rs/: Cargo.toml
middle-rs/src/: fe.rs  lib.rs
mywasm/: Cargo.toml
mywasm/src/: lib.rs  utils.rs
