[workspace]
members = [
  "common-rs",
  "fe-rs",
  "be-rs",
]

[patch.crates-io]
rusqlite = {git = "https://github.com/rusqlite/rusqlite", branch = "master"}
wasm-bindgen = {git = "https://github.com/trevyn/wasm-bindgen", branch = "getter_with_clone"}# https://github.com/rustwasm/wasm-bindgen/pull/2633

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
lto = true # Enable Link Time Optimization
opt-level = "s" # Optimize for size.
