[workspace]
members = [
  "common-rs",
  "fe-rs",
  "be-rs",
]

[patch.crates-io]
lol_html = {git = "https://github.com/cloudflare/lol-html", branch = "master"}
rusqlite = {git = "https://github.com/rusqlite/rusqlite", branch = "master"}
warp = {git = "https://github.com/seanmonstar/warp", branch = "master"}
wasm-bindgen = {git = "https://github.com/rustwasm/wasm-bindgen", branch = "master"}

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
lto = true # Enable Link Time Optimization
opt-level = "s" # Optimize for size.
