[package]
authors = ["trevyn <trevyn-git@protonmail.com>"]
edition = "2018"
name = "be-rs"
version = "0.1.0"

[dependencies]
anyhow = "1"
bincode = "1"
clap = "=3.0.0-beta.2"
common-rs = {path = "../common-rs", features = ["turbosql"]}
futures-channel = "0.3"
futures-util = "0.3"
html-escape = "0.2"
log = "0.4"
lol_html = "0.3"
pretty_env_logger = "0.4"
reqwest = "0.11"
rust-embed = "5"
serde_json = "1"
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "0.15"
url = "2.2.0"
warp = "0.3"
