[package]
authors = ["trevyn <trevyn-git@protonmail.com>"]
edition = "2018"
name = "be-rs"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1"
bincode = "1"
clap = "=3.0.0-beta.2"
futures = "0.3"
html-escape = "0.2"
log = "0.4"
lol_html = "0.3"
middle-rs = {path = "../middle-rs"}
mime_guess = "2"
pretty_env_logger = "0.4"
reqwest = {version = "0.11", features = ["stream"]}
rust-embed = "6"
serde_json = "1"
tokio = {version = "1", features = ["full"]}
tokio-stream = {version = "0.1", features = ["net"]}
turbosql = "0.2"
url = "2"
warp = {version = "0.3", features = ["tls"]}
