[package]
authors = ["trevyn <trevyn-git@protonmail.com>"]
edition = "2018"
name = "common-rs"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = {version = "1", features = ["derive"]}
turbosql = {version = "0.2", optional = true}
wasm-bindgen = {version = "0.2", optional = true}
