[package]
authors = ["trevyn <trevyn-git@protonmail.com>"]
edition = "2018"
name = "common-rs"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = {version = "1", features = ["derive"]}
turbosql = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = {version = "0.3", features = ["WebSocket"]}
