[package]
authors = ["trevyn <trevyn-git@protonmail.com>"]
edition = "2018"
name = "fe-rs"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
common-rs = {path = "../common-rs", features = ["wasm-bindgen"]}
console_error_panic_hook = {version = "0.1.6", optional = true}
js-sys = "0.3"
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]
version = "0.3.22"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
