[package]
authors = ["trevyn <trevyn-git@protonmail.com>"]
edition = "2018"
name = "fe-rs"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common-rs = {path = "../common-rs", features = ["wasm-bindgen"]}
console_error_panic_hook = "0.1"
js-sys = "0.3"
serde_json = "1"
wasm-bindgen = "0.2"

[dependencies.web-sys]
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]
version = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
