[package]
authors = ["trevyn <trevyn-git@protonmail.com>"]
edition = "2018"
name = "middle-rs"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
turbosql = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = {version = "0.3", features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]}
